--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,14 +11,14 @@ jobs:
     - run: git fetch origin +refs/tags/*:refs/tags/*
     - name: Set VERSION
       if: startsWith(github.event.ref, 'refs/tags/v')
-      run: echo ::set-env name=VERSION::${{ github.ref }}
-    - name: Set package name
-      id: get_package_name
-      run: echo ::set-output name=pkgname::$(ls -1 kip-cell_*.deb)
+      run: echo ::set-env name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: Build package
       run: |
         sudo apt-get update -y && sudo apt-get install debhelper devscripts curl
         ./build.sh
+    - name: Set package name
+      id: get_package_name
+      run: echo ::set-output name=pkgname::$(ls -1 kip-cell_*.deb)
     - name: Create release
       if: startsWith(github.event.ref, 'refs/tags/v')
       id: create_release
