--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Build image
       if: startsWith(github.event.ref, 'refs/tags/v')
       uses: operatehappy/packer-github-actions@v0.2.0
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
         command: build
         arguments: -var package=${{ steps.get_package_name.outputs.pkgname }}
