--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
         arguments: -syntax-only
         target: packer.json
 
+    - name: Save GCP account.json
+      run: echo "${{ secrets.GCP_ACCOUNT_JSON }}" > account.json
+
     - name: Build image
       if: startsWith(github.event.ref, 'refs/tags/v')
       uses: operatehappy/packer-github-actions@v0.2.0
