--- a/kip-cell/debian/itzo-launcher.service
+++ b/kip-cell/debian/itzo-launcher.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/itzo-launcher
+ExecStart=/usr/bin/itzo-launcher --v=5
 
 [Install]
 WantedBy=multi-user.target
