Make sure service gets restarted

--- a/kip-cell/debian/itzo-launcher.service
+++ b/kip-cell/debian/itzo-launcher.service
@@ -1,9 +1,12 @@
 [Unit]
 Description=Itzo launcher
 After=network.target
+StartLimitIntervalSec=0
 
 [Service]
 Type=simple
+Restart=on-failure
+RestartSec=3s
 ExecStart=/usr/bin/itzo-launcher --v=5
 
 [Install]
