--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
       if: startsWith(github.event.ref, 'refs/tags/v')
       run: echo ::set-env name=VERSION::${GITHUB_REF/refs\/tags\//}
 
+    - name: Set GCE_VERSION
+      run: echo ::set-env name=GCE_VERSION::${VERSION//./-}
+
     - name: Save GCE account.json
       run: echo "${{ secrets.GCP_ACCOUNT_JSON }}" | base64 -d > account.json
 
@@ -62,6 +65,13 @@ jobs:
         arguments: -var package=${{ steps.get_package_name.outputs.pkgname }}
         target: packer.json
 
+    - name: Make GCE image public
+      if: startsWith(github.event.ref, 'refs/tags/v')
+      run: |-
+        gcloud compute images add-iam-policy-binding \
+          elotl-kipdev-${VERSION} \
+          --member=allAuthenticatedUsers \
+          --role='roles/compute.imageUser'
 
     - name: Create release
       if: startsWith(github.event.ref, 'refs/tags/v')
