--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,6 @@ jobs:
       run: git fetch origin +refs/tags/*:refs/tags/*
 
     - name: Set VERSION
-      if: startsWith(github.event.ref, 'refs/tags/v')
       run: echo ::set-env name=VERSION::${GITHUB_REF/refs\/tags\//}
 
     - name: Set GCE_VERSION
@@ -38,8 +37,8 @@ jobs:
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         version: '290.0.1'
-        service_account_key: ${GCE_SA_KEY}
-        project_id: ${GCE_PROJECT_ID}
+        service_account_key: ${{ env.GCE_SA_KEY }}
+        project_id: ${{ env.GCE_PROJECT_ID }}
 
     - name: Build package
       run: |
