--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,14 @@ jobs:
       run: echo "${{ secrets.GCP_ACCOUNT_JSON }}" | base64 -d > account.json
 
     - name: Set GCE_SA_KEY
-      run: echo ::set-env name=GCE_SA_KEY::$(jq '.private_key' < account.json)
+      run: echo ::set-env name=GCE_SA_KEY::$(cat account.json)
 
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         version: '290.0.1'
         service_account_key: ${{ env.GCE_SA_KEY }}
         project_id: ${{ env.GCE_PROJECT_ID }}
+        export_default_credentials: true
 
     - name: Build package
       run: |
