--- a/google-fluentd-cell.conf
+++ b/google-fluentd-cell.conf
@@ -101,13 +101,28 @@
   time_format %m%d %H:%M:%S.%N
   path /var/log/itzo/itzo.log
   pos_file /var/log/gcp-itzo.log.pos
-  tag kube-scheduler
+  tag itzo
 </source>
+
+# Example:
+# I0604 22:57:48.073521    2557 network_policy_controller.go:280] Syncing network policy chains took 1.398594ms
+<source>
+  @type tail
+  format multiline
+  multiline_flush_interval 5s
+  format_firstline /^\w\d{4}/
+  format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
+  time_format %m%d %H:%M:%S.%N
+  path /var/log/kube-router.log
+  pos_file /var/log/gcp-kube-router.log.pos
+  tag kube-router
+</source>
+
 # Logs from systemd-journal for interesting services.
 <source>
   @type systemd
   filters [{ "_SYSTEMD_UNIT": "itzo-launcher.service" }]
   pos_file /var/log/gcp-journald-itzo-launcher.pos
   read_from_head true
-  tag kubelet
+  tag itzo-launcher
 </source>
