Use td-agent dir for pos files

--- a/aws-fluentd-cell.conf
+++ b/aws-fluentd-cell.conf
@@ -8,7 +8,7 @@
   @label @containers
   path /var/log/containers/*.log
   exclude_path ["/var/log/containers/cloudwatch-agent*", "/var/log/containers/fluentd*"]
-  pos_file /var/log/fluentd-containers.log.pos
+  pos_file /var/log/td-agent/fluentd-containers.log.pos
   tag *
   read_from_head true
   <parse>
@@ -22,7 +22,7 @@
   @id in_tail_cwagent_logs
   @label @cwagentlogs
   path /var/log/containers/cloudwatch-agent*
-  pos_file /var/log/cloudwatch-agent.log.pos
+  pos_file /var/log/td-agent/cloudwatch-agent.log.pos
   tag *
   read_from_head true
   <parse>
@@ -36,7 +36,7 @@
   @id in_tail_fluentd_logs
   @label @fluentdlogs
   path /var/log/containers/fluentd*
-  pos_file /var/log/fluentd.log.pos
+  pos_file /var/log/td-agent/fluentd.log.pos
   tag *
   read_from_head true
   <parse>
@@ -154,7 +154,7 @@
   <storage>
     @type local
     persistent true
-    path /var/log/fluentd-journald-itzo-launcher-pos.json
+    path /var/log/td-agent/fluentd-journald-itzo-launcher-pos.json
   </storage>
   read_from_head true
   tag itzo-launcher.service
@@ -173,7 +173,7 @@
   <storage>
     @type local
     persistent true
-    path /var/log/fluentd-journald-docker-pos.json
+    path /var/log/td-agent/fluentd-journald-docker-pos.json
   </storage>
   read_from_head true
   tag docker.service
@@ -215,7 +215,7 @@
   @id in_tail_dmesg
   @label @hostlogs
   path /var/log/dmesg
-  pos_file /var/log/dmesg.log.pos
+  pos_file /var/log/td-agent/dmesg.log.pos
   tag host.dmesg
   read_from_head true
   <parse>
@@ -228,7 +228,7 @@
   @id in_tail_secure
   @label @hostlogs
   path /var/log/secure
-  pos_file /var/log/secure.log.pos
+  pos_file /var/log/td-agent/secure.log.pos
   tag host.secure
   read_from_head true
   <parse>
@@ -241,7 +241,7 @@
   @id in_tail_messages
   @label @hostlogs
   path /var/log/messages
-  pos_file /var/log/messages.log.pos
+  pos_file /var/log/td-agent/messages.log.pos
   tag host.messages
   read_from_head true
   <parse>
@@ -290,7 +290,7 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/itzo/itzo.log
-  pos_file /var/log/itzo.log.pos
+  pos_file /var/log/td-agent/itzo.log.pos
   tag itzo
 </source>
 
@@ -304,6 +304,6 @@
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
   time_format %m%d %H:%M:%S.%N
   path /var/log/kube-router.log
-  pos_file /var/log/kube-router.log.pos
+  pos_file /var/log/td-agent/kube-router.log.pos
   tag kube-router
 </source>
