--- a/aws-fluentd-cell.conf
+++ b/aws-fluentd-cell.conf
@@ -1,14 +1,9 @@
-<match fluent.**>
-  @type null
-</match>
-
 <source>
   @type tail
   @id in_tail_container_logs
   @label @containers
   path /var/log/containers/*.log
-  exclude_path ["/var/log/containers/cloudwatch-agent*", "/var/log/containers/fluentd*"]
-  pos_file /var/log/td-agent/fluentd-containers.log.pos
+  pos_file /var/log/td-agent/var-log-containers.log.pos
   tag *
   read_from_head true
   <parse>
@@ -16,54 +11,6 @@
     time_format %Y-%m-%dT%H:%M:%S.%NZ
   </parse>
 </source>
-
-<source>
-  @type tail
-  @id in_tail_cwagent_logs
-  @label @cwagentlogs
-  path /var/log/containers/cloudwatch-agent*
-  pos_file /var/log/td-agent/cloudwatch-agent.log.pos
-  tag *
-  read_from_head true
-  <parse>
-    @type json
-    time_format %Y-%m-%dT%H:%M:%S.%NZ
-  </parse>
-</source>
-
-<source>
-  @type tail
-  @id in_tail_fluentd_logs
-  @label @fluentdlogs
-  path /var/log/containers/fluentd*
-  pos_file /var/log/td-agent/fluentd.log.pos
-  tag *
-  read_from_head true
-  <parse>
-    @type json
-    time_format %Y-%m-%dT%H:%M:%S.%NZ
-  </parse>
-</source>
-
-<label @fluentdlogs>
-  <filter **>
-    @type kubernetes_metadata
-    @id filter_kube_metadata_fluentd
-  </filter>
-
-  <filter **>
-    @type record_transformer
-    @id filter_fluentd_stream_transformer
-    <record>
-      stream_name ${tag_parts[3]}
-    </record>
-  </filter>
-
-  <match **>
-    @type relabel
-    @label @NORMAL
-  </match>
-</label>
 
 <label @containers>
   <filter **>
@@ -83,35 +30,6 @@
     @type concat
     key log
     multiline_start_regexp /^\S/
-    separator ""
-    flush_interval 5
-    timeout_label @NORMAL
-  </filter>
-
-  <match **>
-    @type relabel
-    @label @NORMAL
-  </match>
-</label>
-
-<label @cwagentlogs>
-  <filter **>
-    @type kubernetes_metadata
-    @id filter_kube_metadata_cwagent
-  </filter>
-
-  <filter **>
-    @type record_transformer
-    @id filter_cwagent_stream_transformer
-    <record>
-      stream_name ${tag_parts[3]}
-    </record>
-  </filter>
-
-  <filter **>
-    @type concat
-    key log
-    multiline_start_regexp /^\d{4}[-/]\d{1,2}[-/]\d{1,2}/
     separator ""
     flush_interval 5
     timeout_label @NORMAL
@@ -178,7 +96,7 @@
     @type cloudwatch_logs
     @id out_cloudwatch_logs_systemd
     region "#{ENV.fetch('REGION')}"
-    log_group_name "/aws/containerinsights/#{ENV.fetch('CLUSTER_NAME')}/dataplane"
+    log_group_name "/aws/containerinsights/#{ENV.fetch('CLUSTER_NAME')}/host"
     log_stream_name_key stream_name
     auto_create_stream true
     remove_log_stream_name_key true
@@ -272,7 +190,8 @@
   time_format %m%d %H:%M:%S.%N
   path /var/log/itzo/itzo.log
   pos_file /var/log/td-agent/itzo.log.pos
-  tag itzo
+  @label @hostlogs
+  tag host.itzo
 </source>
 
 # Example:
@@ -286,5 +205,6 @@
   time_format %m%d %H:%M:%S.%N
   path /var/log/kube-router.log
   pos_file /var/log/td-agent/kube-router.log.pos
-  tag kube-router
+  @label @hostlogs
+  tag host.kube-router
 </source>
