Update AWS fluentd conf

--- a/aws-fluentd-cell.conf
+++ b/aws-fluentd-cell.conf
@@ -63,7 +63,7 @@
   @type systemd
   @id in_systemd_itzo_launcher
   @label @systemd
-  filters [{ "_SYSTEMD_UNIT": "itzo-launcher.service" }]
+  matches [{ "_SYSTEMD_UNIT": "itzo-launcher.service" }]
   <entry>
     field_map {"MESSAGE": "message", "_HOSTNAME": "hostname", "_SYSTEMD_UNIT": "systemd_unit"}
     field_map_strict true
@@ -109,56 +109,12 @@
   </match>
 </label>
 
-<source>
-  @type tail
-  @id in_tail_dmesg
-  @label @hostlogs
-  path /var/log/dmesg
-  pos_file /var/log/td-agent/dmesg.log.pos
-  tag host.dmesg
-  read_from_head true
-  <parse>
-    @type syslog
-  </parse>
-</source>
-
-<source>
-  @type tail
-  @id in_tail_secure
-  @label @hostlogs
-  path /var/log/secure
-  pos_file /var/log/td-agent/secure.log.pos
-  tag host.secure
-  read_from_head true
-  <parse>
-    @type syslog
-  </parse>
-</source>
-
-<source>
-  @type tail
-  @id in_tail_messages
-  @label @hostlogs
-  path /var/log/messages
-  pos_file /var/log/td-agent/messages.log.pos
-  tag host.messages
-  read_from_head true
-  <parse>
-    @type syslog
-  </parse>
-</source>
-
 <label @hostlogs>
-  <filter **>
-    @type kubernetes_metadata
-    @id filter_kube_metadata_host
-  </filter>
-
   <filter **>
     @type record_transformer
     @id filter_containers_stream_transformer_host
     <record>
-      stream_name ${tag}-${record["host"]}
+      stream_name ${tag}
     </record>
   </filter>
 
@@ -184,6 +140,7 @@
 <source>
   @type tail
   format multiline
+  read_from_head true
   multiline_flush_interval 5s
   format_firstline /^\w\d{4}/
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
@@ -191,7 +148,7 @@
   path /var/log/itzo/itzo.log
   pos_file /var/log/td-agent/itzo.log.pos
   @label @hostlogs
-  tag host.itzo
+  tag "host.itzo.#{Socket.gethostname}"
 </source>
 
 # Example:
@@ -199,6 +156,7 @@
 <source>
   @type tail
   format multiline
+  read_from_head true
   multiline_flush_interval 5s
   format_firstline /^\w\d{4}/
   format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
@@ -206,5 +164,5 @@
   path /var/log/kube-router.log
   pos_file /var/log/td-agent/kube-router.log.pos
   @label @hostlogs
-  tag host.kube-router
+  tag "host.kube-router.#{Socket.gethostname}"
 </source>
