Use instance ID instead of hostname

--- a/aws-cloudwatch-agent.conf
+++ b/aws-cloudwatch-agent.conf
@@ -52,25 +52,25 @@
          {
            "file_path": "/var/log/containers/**.log",
            "log_group_name": "/aws/containerinsights/{{ClusterName}}/application",
-           "log_stream_name": "{hostname}-application.log",
+           "log_stream_name": "{instance_id}-application.log",
            "timestamp_format": "%Y-%m-%dT%H:%M:%S.%fZ"
          },
          {
            "file_path": "/var/log/itzo/itzo.log",
            "log_group_name": "/aws/containerinsights/{{ClusterName}}/host",
-           "log_stream_name": "{hostname}-itzo.log",
+           "log_stream_name": "{instance_id}-itzo.log",
            "timestamp_format": "%m%d %H:%M:%S.%f"
          },
          {
            "file_path": "/var/log/kube-router.log",
            "log_group_name": "/aws/containerinsights/{{ClusterName}}/host",
-           "log_stream_name": "{hostname}-kube-router.log",
+           "log_stream_name": "{instance_id}-kube-router.log",
            "timestamp_format": "%m%d %H:%M:%S.%f"
          }
        ]
      }
    },
-   "log_stream_name": "{hostname}",
+   "log_stream_name": "{instance_id}",
    "force_flush_interval" : 15
   }
 }
