--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,9 @@
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - master
+    tags-ignore:
+    - '*'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,12 +29,7 @@ jobs:
     - name: Fetch tags
       run: git fetch origin +refs/tags/*:refs/tags/*
 
-    - name: Set VERSION for release tags
-      if: startsWith(github.event.ref, 'refs/tags/v')
-      run: echo ::set-env name=VERSION::${GITHUB_REF/refs\/tags\//}
-
     - name: Set VERSION
-      if: "!startsWith(github.event.ref, 'refs/tags/v')"
       run: echo ::set-env name=VERSION::$(git describe --dirty)
 
     - name: Set GCE_VERSION
@@ -80,38 +80,3 @@ jobs:
           elotl-kipdev-latest \
           --member=allAuthenticatedUsers \
           --role='roles/compute.imageUser'
-
-    - name: Create elotl-kipdev-latest on AWS
-      run: |-
-        image_id=$(aws ec2 describe-images \
-          --filters Name=name,Values=elotl-kipdev-${VERSION} | \
-          jq -r '.Images[0].ImageId')
-        new_image_id=$(aws ec2 copy-image \
-          --name elotl-kipdev-latest \
-          --source-image-id ${image_id} \
-          --source-region ${AWS_REGION} | jq -r '.ImageId')
-        aws ec2 wait image-available \
-            --image-ids ${new_image_id}
-        aws ec2 modify-image-attribute \
-          --image-id ${new_image_id} \
-          --launch-permission "Add=[{Group=all}]"
-
-    - name: Create release
-      if: startsWith(github.event.ref, 'refs/tags/v')
-      id: create_release
-      uses: actions/create-release@v1
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-
-    - name: Upload release asset
-      if: startsWith(github.event.ref, 'refs/tags/v')
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ steps.get_package_name.outputs.pkgname }}
-        asset_name: ${{ steps.get_package_name.outputs.pkgname }}
-        asset_content_type: application/octet-stream
