--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
         image_id=$(aws ec2 describe-images \
           --filters Name=name,Values=elotl-kipdev-${VERSION} | \
           jq -r '.Images[0].ImageId')
-        echo "waiting for source image ${image_id}"
+        echo "waiting for source image ${image_id} in region ${AWS_REGION}"
         aws ec2 wait image-available \
           --image-ids ${image_id}
         for dst_region in ap-south-1 eu-west-3 eu-west-2 eu-west-1 eu-north-1 ap-northeast-2 ap-northeast-1 sa-east-1 ca-central-1 ap-southeast-1 ap-southeast-2 eu-central-1 us-east-1 us-east-2 us-west-1 us-west-2; do
