--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,12 +69,20 @@ jobs:
         echo "waiting for source image ${image_id} in region ${AWS_REGION}"
         aws ec2 wait image-available \
           --image-ids ${image_id}
+        all_images=""
         for dst_region in ap-south-1 eu-west-3 eu-west-2 eu-west-1 eu-north-1 ap-northeast-2 ap-northeast-1 sa-east-1 ca-central-1 ap-southeast-1 ap-southeast-2 eu-central-1 us-east-1 us-east-2 us-west-1 us-west-2; do
+          # Copy image into the regions above.
           new_image_id=$(aws ec2 copy-image \
             --region ${dst_region} \
             --name elotl-kip-${GIT_TAG} \
             --source-image-id ${image_id} \
             --source-region ${AWS_REGION} | jq -r '.ImageId')
+          all_images="${dst_region}:${new_image_id} ${all_images}"
+        done
+        for image in $all_images; do
+          # Wait for images to become available, and make them public.
+          dst_region=$(echo ${image} | cut -d':' -f 1)
+          new_image_id=$(echo ${image} | cut -d':' -f 2)
           echo "waiting for new image ${new_image_id} in region ${dst_region}"
           aws ec2 wait image-available \
             --region ${dst_region} \
