* base kip-cell-image on ubuntu 18.04 * remove ami_groups to avoid Encrypted snapshots can't be shared publicly error * install podman, enable podman.socket * install td-agent for bionic * disable kubernetes-metadata-filter plugin * verify fluentd config

--- a/aws-fluentd-cell.conf
+++ b/aws-fluentd-cell.conf
@@ -13,10 +13,10 @@
 </source>
 
 <label @containers>
-  <filter **>
-    @type kubernetes_metadata
-    @id filter_kube_metadata
-  </filter>
+#  <filter **>
+#    @type kubernetes_metadata
+#    @id filter_kube_metadata
+#  </filter>
 
   <filter **>
     @type record_transformer
@@ -80,10 +80,10 @@
 </source>
 
 <label @systemd>
-  <filter **>
-    @type kubernetes_metadata
-    @id filter_kube_metadata_systemd
-  </filter>
+#  <filter **>
+#    @type kubernetes_metadata
+#    @id filter_kube_metadata_systemd
+#  </filter>
 
   <filter **>
     @type record_transformer
