--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
-on: push #:
-#    tags-ignore:
-#    - v*
+on:
+  push:
+    branches:
+      - master
+    tags-ignore:
+      - v*
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
